--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web-socket-service",
+  "name": "notification-service",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
