--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,5 +62,21 @@ jobs:
 
       - name: Build Docker Image
         run: docker build -t ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} -f docker/prod/Dockerfile .
+
       - name: Push Docker Image
         run: docker push ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+
+      - name: Update Deployment Repository
+        run: |
+          git clone https://x-access-token:${{ secrets.DEPLOYMENT_PAT }}@github.com/KoushikPanda1729/microservice_deployment.git deployment-repo
+          cd deployment-repo
+
+          # Update image tag in deployment.yaml
+          sed -i "s|image: koushik172/notification-service:.*|image: koushik172/notification-service:${{ env.IMAGE_TAG }}|g" notification-service/deployment.yaml
+
+          # Commit and push
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git add notification-service/deployment.yaml
+          git commit -m "chore: Update notification-service image to ${{ env.IMAGE_TAG }}"
+          git push
